Add icon in web and comment logging

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="kkn_unhas_mamajang_106">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="icon" href="icons/logo-kkn.png" type="image/png"/>
 
   <title>kkn_unhas_mamajang_106</title>
   <link rel="manifest" href="manifest.json">
